Driver and first wire up